[BUGFIX][Lesson] Lesson cover has whitespace on Mobile Devics (https://github.com/FrontEnd-ro/frontend.ro/issues/221)

--- a/client/components/lessons/LessonCover/LessonCover.module.scss
+++ b/client/components/lessons/LessonCover/LessonCover.module.scss
@@ -1,6 +1,8 @@
 @import '../../../styles/variables';
 
 .lesson-cover {
+  display: flex;
+  width: 100%;
   margin: 0;
   padding: 1em;
   border-radius: 1em;
